<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="7dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/res"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/clr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button"
            android:text="@string/c"
            android:textSize="30sp"
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/div"
            android:textColor="@color/black"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/white"
            />
        <Button
            android:id="@+id/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/mult"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:backgroundTint="@color/white" />
        <Button
            android:id="@+id/dot"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:backgroundTint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_7"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_8"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_9"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/sub"
            android:textSize="30sp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_4"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_5"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_6"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />
        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/add"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="-34dp">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_1"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_2"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_3"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />
        <Button
            android:id="@+id/eqs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/ans"
            android:textSize="30sp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/_0"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />


        

        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>